fix: use Collectors.toList()